# pyclassifiers

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
.github/workflows/: build.yml
config/: platform.py  project.py  python.py  version.py
pyclassifiers/: static.py  values.py
scripts/: create.py
src/pyclassifiers/: static.py  values.py
templates/: LICENSE.mako  README.rst.mako  pyproject.toml.mako  setup.py.mako
templates/.github/workflows/: build.yml.mako
