[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclassifiers"
description = "classifiers from pypi"
version = "0.0.7"

packages = [{ include = "pyclassifiers" }]

license = "MIT"
authors = [
	name = "Mark Veltzer",
	email = "mark.veltzer@gmail.com",
]

readme = "README.rst"

keywords = [
    "classifiers",
    "python",
    "pypi",
    "setuptools",
    "distutils",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.8"

dependencies = [
]

[project.optional-dependencies]
dev = ['pypitools', 'requests']

